@@ -2,11 +2,8 @@ package tn.zeros.marketmaster.service;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -15,10 +12,8 @@ import tn.zeros.marketmaster.dto.HoldingDTO;
 import tn.zeros.marketmaster.entity.Holding;
 import tn.zeros.marketmaster.entity.Portfolio;
 import tn.zeros.marketmaster.entity.User;
-import tn.zeros.marketmaster.exception.PortfolioNotFoundException;
 import tn.zeros.marketmaster.exception.UserNotFoundException;
 import tn.zeros.marketmaster.repository.HoldingRepository;
-import tn.zeros.marketmaster.repository.PortfolioRepository;
 import tn.zeros.marketmaster.repository.UserRepository;
 
 @Slf4j
@@ -28,6 +23,7 @@ public class HoldingService {
 
     private final HoldingRepository holdingRepository;
     private final UserRepository userRepository;
+
     @Transactional
     public void updateAverageCostBasis(Long holdingId, BigDecimal newPurchaseAmount, int newQuantity) {
         Holding holding = holdingRepository.findById(holdingId)
@@ -44,15 +40,15 @@ public class HoldingService {
 
         holdingRepository.save(holding);
     }
-    public List<HoldingDTO> getAll(Long userId) {
-        User user = userRepository.findById(userId)
+
+    public List<HoldingDTO> getAll(String userName) {
+        User user = userRepository.findByUsername(userName)
                 .orElseThrow(() -> new UserNotFoundException("User not found"));
         Portfolio portfolio = user.getPortfolio();
         Set<Holding> holdings =portfolio.getHoldings();
-        List<HoldingDTO> holdingDTOS = holdings.stream()
-                .map(HoldingDTO::fromEntity)  //
-                .collect(Collectors.toList());
-        return holdingDTOS;
+        return holdings.stream()
+                .map(HoldingDTO::fromEntity)
+                .toList();
     }
 
 
